--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="FlightAware FIDS"
-      content="Flight Information Display System"
+      name="FlightAware Alert Creation"
+      content="Flight Alert Creation App"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <title>FlightAware FIDS</title>
+    <title>FlightAware Alert Creation</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
